[gd_scene load_steps=22 format=4 uid="uid://m4ihrjrxa1ig"]

[ext_resource type="Script" uid="uid://dxdrjgk0ph461" path="res://Levels/level.gd" id="1_acdnu"]
[ext_resource type="PackedScene" uid="uid://c7o1t4l0sfnfd" path="res://Characters/LilGuys.tscn" id="2_qc8g6"]
[ext_resource type="PackedScene" uid="uid://cfnclf88rqoqo" path="res://Characters/birbs.tscn" id="3_y3x56"]
[ext_resource type="Texture2D" uid="uid://chfg5vj5f1ox3" path="res://Assets/Tilesets/transluscent-floor-tiles.png" id="4_q1ycg"]
[ext_resource type="Texture2D" uid="uid://bhokl7ayqb7rr" path="res://Assets/Tilesets/background.png" id="4_qc8g6"]
[ext_resource type="PackedScene" uid="uid://b7roenci6wpu0" path="res://Levels/LevelThings/sun.tscn" id="5_q1ycg"]
[ext_resource type="PackedScene" uid="uid://66sny5ku3jsj" path="res://Levels/LevelThings/MeltyWall.tscn" id="5_y3x56"]
[ext_resource type="Texture2D" uid="uid://cw5kx62uakpqr" path="res://Assets/Tilesets/snow-floor-tiles.png" id="6_n6v67"]
[ext_resource type="FontFile" uid="uid://bbfwwb8s46p8h" path="res://Assets/Fonts/pixel_operator/PixelOperator-Bold.ttf" id="9_ht8ui"]
[ext_resource type="Theme" uid="uid://cnh7h68snirln" path="res://UI/ui_theme.tres" id="10_n6v67"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_q1ycg"]
polygon = PackedVector2Array(8, 8, 8, -8, -8, -8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_y3x56"]
polygon = PackedVector2Array(-8, 8, -8, 7.2413588, 8, 4.9319525, 8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qc8g6"]
polygon = PackedVector2Array(-8, 8, -8, 4.6415167, 8, 1.8944969, 8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3anf8"]
texture = ExtResource("6_n6v67")
0:0/0 = 0
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_y3x56")
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_qc8g6")
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_q1ycg")
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_q1ycg")
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_q1ycg")
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q1ycg"]
texture = ExtResource("4_q1ycg")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 1
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 1
1:0/0/terrains_peering_bit/left_side = 1
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/left_side = 1
0:1/0 = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 1
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 2
2:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 2
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 2
1:2/0/terrains_peering_bit/left_side = 2
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 2

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_qc8g6"]
resource_name = "Scene Tiles"
scenes/1/scene = ExtResource("5_y3x56")

[sub_resource type="TileSet" id="TileSet_fhqol"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 2
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Ground"
terrain_set_0/terrain_0/color = Color(0.5019608, 0.34509805, 0.02745098, 1)
terrain_set_0/terrain_1/name = "Glass \\"
terrain_set_0/terrain_1/color = Color(0.5019608, 0.4392157, 0.8901961, 1)
terrain_set_0/terrain_2/name = "Glass /"
terrain_set_0/terrain_2/color = Color(0.2323516, 0.1622051, 0.5002063, 1)
sources/0 = SubResource("TileSetAtlasSource_3anf8")
sources/1 = SubResource("TileSetAtlasSource_q1ycg")
sources/2 = SubResource("TileSetScenesCollectionSource_qc8g6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1ycg"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhqol"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_w77jt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3anf8"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("tile_map", "lilguy_spawn", "birbs", "sun")]
script = ExtResource("1_acdnu")
goal_min = 1
lilguys_max_to_spawn = 1
tile_map = NodePath("TileMap")
lilguy_spawn = NodePath("lilguy_spawn")
birbs = NodePath("Birbs")
sun = NodePath("Sun")
lil_guy_scene = ExtResource("2_qc8g6")
metadata/_custom_type_script = "uid://dxdrjgk0ph461"

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(200, 112)
scale = Vector2(25, 14)
texture = ExtResource("4_qc8g6")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAwAAAAAAAIAAAAAAA0AAAAAAAAAAAABAA0AAAAAAAAAAAACAA0AAAAAAAAAAAADAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAGAA0AAAAAAAAAAAAHAA0AAAAAAAAAAAAIAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAKAA0AAAAAAAAAAAALAA0AAAAAAAAAAAAMAA0AAAAAAAAAAAANAA0AAAAAAAAAAAAOAA0AAAAAAAAAAAAPAA0AAAAAAAAAAAAQAA0AAAAAAAAAAAARAA0AAAAAAAAAAAASAA0AAAAAAAAAAAATAA0AAAAAAAAAAAAUAA0AAAAAAAAAAAAVAA0AAAAAAAAAAAAWAA0AAAAAAAAAAAAXAA0AAAAAAAAAAAAXAAwAAAACAAIAAAAWAAwAAAABAAIAAAAVAAwAAAABAAIAAAAUAAwAAAABAAIAAAATAAwAAAABAAIAAAASAAwAAAABAAIAAAARAAwAAAABAAIAAAAQAAwAAAABAAIAAAAPAAwAAAABAAIAAAAOAAwAAAABAAIAAAANAAwAAAABAAIAAAAMAAwAAAABAAIAAAALAAwAAAABAAIAAAAKAAwAAAABAAIAAAAJAAwAAAABAAIAAAAIAAwAAAABAAIAAAAHAAwAAAABAAIAAAAGAAwAAAABAAIAAAAFAAwAAAABAAIAAAAEAAwAAAABAAIAAAADAAwAAAABAAIAAAACAAwAAAABAAIAAAABAAwAAAABAAIAAAATAAsAAAAAAAEAAAAUAAsAAAABAAEAAAAVAAoAAAABAAAAAAAWAAoAAAACAAAAAAAWAAsAAAACAAEAAAAXAAsAAAAAAAAAAAAXAAoAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fhqol")

[node name="Sun" parent="." instance=ExtResource("5_q1ycg")]
position = Vector2(192, 32)

[node name="Birbs" parent="." instance=ExtResource("3_y3x56")]
position = Vector2(192, 80)

[node name="lilguy_spawn" type="Marker2D" parent="."]
position = Vector2(8, 184)
metadata/_edit_group_ = true

[node name="lilguy_spawn_area" type="Area2D" parent="lilguy_spawn"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lilguy_spawn/lilguy_spawn_area"]
shape = SubResource("RectangleShape2D_q1ycg")

[node name="SpawnLabel" type="RichTextLabel" parent="lilguy_spawn/lilguy_spawn_area"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -26.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("9_ht8ui")
bbcode_enabled = true
text = "XX"
horizontal_alignment = 1

[node name="goal_zone" type="Area2D" parent="." groups=["goal"]]
position = Vector2(360, 184)

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_zone"]
shape = SubResource("RectangleShape2D_fhqol")

[node name="GoalLabel" type="RichTextLabel" parent="goal_zone"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -31.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_n6v67")
theme_override_fonts/normal_font = ExtResource("9_ht8ui")
bbcode_enabled = true
text = "XX"

[node name="worldbounds" type="StaticBody2D" parent="."]

[node name="left" type="CollisionShape2D" parent="worldbounds"]
rotation = 1.5707964
shape = SubResource("WorldBoundaryShape2D_w77jt")

[node name="right" type="CollisionShape2D" parent="worldbounds"]
position = Vector2(384, 0)
rotation = -1.5707964
shape = SubResource("WorldBoundaryShape2D_3anf8")

[node name="GoalSafeZone" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GoalSafeZone"]
position = Vector2(1, 0)
polygon = PackedVector2Array(335, 176, 335, 174, 367, 168, 367, 176)
